%% TaskV2StateMachineTopology
stateDiagram-v2
  direction LR
  ABORT --> ABORT : ABORT
  ABORT --> PREPARE_CONTEXT : RESTORE_TASK

  API_COMPLETED --> ABORT : ABORT
  API_COMPLETED --> PREPARE_CONTEXT : "API_CALLING_RETRY, CONTINUE_NEXT_TURN"
  API_COMPLETED --> TASK_COMPLETE : TASK_COMPLETE
  API_COMPLETED --> WAITING_USER_ASK_RESPONSE : ASK_USER

  CALLING_API --> ABORT : ABORT
  CALLING_API --> API_COMPLETED : API_COMPLETED
  CALLING_API --> CALLING_API : "API_CALLING_RETRY, STREAMING_COMPLETE, ASK_USER, USER_RESPONDED"
  CALLING_API --> PREPARE_CONTEXT : RETRY_PREPARE_CONTEXT
  CALLING_API --> TASK_COMPLETE : API_CALLING_FAILED

  NEW --> START_TASK : START_TASK
  NEW --> WAITING_USER_ASK_RESPONSE : RESUME_TASK

  PREPARE_CONTEXT --> ABORT : "PREPARE_FAILED, ABORT"
  PREPARE_CONTEXT --> CALLING_API : CONTEXT_READY
  PREPARE_CONTEXT --> WAITING_USER_ASK_RESPONSE : ASK_USER

  START_TASK --> PREPARE_CONTEXT : PREPARE_CONTEXT

  TASK_COMPLETE --> START_TASK : START_TASK
  TASK_COMPLETE --> TASK_COMPLETE : ABORT

  WAITING_USER_ASK_RESPONSE --> ABORT : ABORT
  WAITING_USER_ASK_RESPONSE --> PREPARE_CONTEXT : PREPARE_CONTEXT
  WAITING_USER_ASK_RESPONSE --> TASK_COMPLETE : TASK_COMPLETE
  WAITING_USER_ASK_RESPONSE --> WAITING_USER_ASK_RESPONSE : USER_RESPONDED

